# meojson-ng

./: .gitignore  CHANGELOG  CMakeLists.txt  CMakeLists.txt.bak  README.md
include/: json.hpp  macros.hpp
include/common/: array.hpp  forward.hpp  impl.hpp  object.hpp  types.hpp  value.hpp
include/common/impl/: array.builtin.hpp  array.checker.hpp  array.container.hpp  array.converter.hpp  array.manipulate.hpp  array.stringify.hpp  concepts.hpp  enum_reflection.hpp  exception.hpp  extends.hpp  extends.impl.hpp  format.hpp  object.builtin.hpp  object.checker.hpp  object.container.hpp  object.converter.hpp  object.manipulate.hpp  object.stringify.hpp  specializes.collection.hpp  specializes.fixed_array.hpp  specializes.hpp  specializes.map.hpp  specializes.nullable.hpp  specializes.path.hpp  specializes.tuple_like.hpp  specializes.variant.hpp  stream.hpp  utils.hpp  value.builtin.hpp  value.checker.hpp  value.container.hpp  value.converter.hpp  value.manipulate.hpp  value.stringify.hpp
include/parser/: bitops.hpp  packed_bytes.hpp  packed_bytes_arm.hpp  packed_bytes_x86.hpp  parser.hpp  parser_impl.hpp
include/reflection/: jsonization.hpp
src/: json.cppm  test_module.cpp
test/: array_test.cpp  main.cpp  object_test.cpp  serializing_test.cpp  smart_ptr_test.cpp  value_test.cpp
