cmake_minimum_required(VERSION 3.30)

project(meojson-ng LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_SCAN_FOR_MODULES OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_library(meojson INTERFACE)
target_include_directories(meojson INTERFACE include)

add_executable(test test/main.cpp)
target_link_libraries(test PRIVATE meojson)
